--- a/src/Styling/style.css
+++ b/src/Styling/style.css
@@ -3,12 +3,13 @@
     
 }
 .bg{
-    background-color: black;
+    background-color:rgb(204, 151, 151);
 }
 .item-font{
  
   font-style:italic;
     font-size: 20px;
+
   
 }
 .shawdow{
@@ -28,4 +29,75 @@
 }
 .center{
     padding-left: 750px;
+}
+
+.collapsible .content {
+    padding: 6px;
+    background-color: #eeeeee;
+}
+.collapsible .header {
+    background-color: #dddddd;
+    padding: 6px;
+    cursor: pointer;
+}
+
+/* Admin */
+/* .navbar {
+    margin-bottom: 0;
+    border-radius: 0;
+  } */
+  
+  /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
+  /* .row.content {height: 450px} */
+  
+  /* Set gray background color and 100% height */
+  /* .sidenav {
+    padding-top: 20px;
+    background-color: #f1f1f1;
+    height: 100%;
+  } */
+  
+  /* Set black background color, white text and some padding */
+  /* footer {
+    background-color: #555;
+    color: white;
+    padding: 15px;
+  }
+   */
+  /* On small screens, set height to 'auto' for sidenav and grid */
+ 
+/* login */
+
+.login{
+    background-color: rgb(137, 225, 225);
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    height: 600px;
+    width: 400px;
+    border-radius: 20px;
+    margin-left: 30em;
+  
+}
+
+.loginDiv{
+    background-color: antiquewhite;
+    height: 850px;
+}
+
+.register{
+   background-color: aqua;
+   text-align: center;
+   font-size: 20px;
+   font-weight: bolder;
+   height: 600px;
+   width: 400px;
+   border-radius: 20px;
+   margin-left: 30em;
+  
+}
+.registerDiv{
+    background-color: antiquewhite;
+   
+  
 }
