--- a/src/App.css
+++ b/src/App.css
@@ -105,3 +105,25 @@ body {
   background: rgba(0, 0, 0, 0.3);
 }
 
+
+
+/* Media query */
+
+
+@media only screen and (min-width: 600px) {
+  .App {
+    text-align: center;
+    background-image: url(./images/logo.jpg);
+    height: 700px;
+    
+  }
+} 
+/* Small devices (portrait tablets and large phones, 600px and up) */
+@media only screen and (max-width: 991px) {
+  .App {
+    text-align: center;
+    background-image: url(./images/logo.jpg);
+    height: 700px;
+    
+  }
+}
