--- a/src/Styling/style.css
+++ b/src/Styling/style.css
@@ -1,15 +1,15 @@
+
 .footer{
     background-color: rgb(213, 213, 24);
     
 }
 .bg{
-    background-color:rgb(204, 151, 151);
+    background-color: black;
 }
 .item-font{
  
   font-style:italic;
     font-size: 20px;
-
   
 }
 .shawdow{
@@ -30,42 +30,30 @@
 .center{
     padding-left: 750px;
 }
-
-.collapsible .content {
-    padding: 6px;
-    background-color: #eeeeee;
-}
-.collapsible .header {
-    background-color: #dddddd;
-    padding: 6px;
-    cursor: pointer;
+.height{
+   height: 80px;
 }
 
-/* Admin */
-/* .navbar {
-    margin-bottom: 0;
-    border-radius: 0;
-  } */
-  
-  /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-  /* .row.content {height: 450px} */
-  
-  /* Set gray background color and 100% height */
-  /* .sidenav {
-    padding-top: 20px;
-    background-color: #f1f1f1;
-    height: 100%;
-  } */
-  
-  /* Set black background color, white text and some padding */
-  /* footer {
-    background-color: #555;
-    color: white;
-    padding: 15px;
-  }
-   */
-  /* On small screens, set height to 'auto' for sidenav and grid */
- 
+@media only screen and (min-width: 600px) {
+    
+    }
+    
+    @media only screen and (max-width: 800px) {
+       
+      } 
+    
+      .borderStyle {
+        border: 8px solid rgb(135, 206, 114) !important;
+        width: 102em;
+      } 
+
+
+    /* Home */
+    
+
+
+
+
 /* login */
 
 .login{
@@ -90,7 +78,7 @@
    text-align: center;
    font-size: 20px;
    font-weight: bolder;
-   height: 600px;
+   height: 800px;
    width: 400px;
    border-radius: 20px;
    margin-left: 30em;
