--- a/src/Styling/style.css
+++ b/src/Styling/style.css
@@ -123,7 +123,7 @@
   }
 .loginDiv{
     background-color: antiquewhite;
-    height: 850px;
+    height: 800px;
 }
 /* Register Component */
 
@@ -132,16 +132,15 @@
    text-align: center;
    font-size: 20px;
    font-weight: bolder;
-   height: 800px;
-   width: 400px;
+   height: 500px;
+   width: 300px;
    border-radius: 20px;
    margin-left: 30em;
   
 }
 .registerDiv{
     background-color: antiquewhite;
-   
-  
+   height: 800px;
 }
 
 /* compare Component */
@@ -228,14 +227,14 @@ font-size: 18px;
 }
 
 .mainpage{
-    margin-left: 2em;
+   
     text-align: center;
      float:right;
      height: 500px;
-    width: 800px;
+     width: 100em;
     position: absolute;
-     top: 14em;
-    left: 3px;
+     top: 18em;
+
    
 }
 .Image-opacity{
@@ -249,7 +248,7 @@ font-size: 18px;
  float: left;
  margin-left: 30em;
  position: absolute;
-     top: 10em;
+     top: 13em;
     left: 3px;
    
 }
@@ -264,13 +263,17 @@ font-size: 18px;
     font-size: 16px;
    
 }
+
 .category{
     float: right;
-    margin-right: 35px;
-margin-top: 50px;
+    margin-right: 50px;
+    margin-top: 50px;
 background-color: #d5d811;
+width: 600px;
 
-
+}
+.non-category{
+    background-color:white;
 }
 .mainpage-input-button{
     margin-bottom: 20px;
@@ -280,13 +283,20 @@ background-color: #d5d811;
     background-color: rgb(41, 114, 10);
 }
 .main{
-    height: 1000px;
+    height: 800px;
 }
+
+span {font-size: 18px;
+  
+font-weight: bolder;}
+span p {font-size: 16px; font-weight: normal;} 
+
+
 /* Contact  */
 .contact-div{
     height: 800px;
     text-align: center;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bolder;
     }
 
