--- a/src/Styling/style.css
+++ b/src/Styling/style.css
@@ -9,10 +9,10 @@
     text-align: center;
 }
 
-/* Footer */
+
 .main-footer {
     color: rgb(45, 42, 42);
-    background-color: #f5efc9;
+    background-color: #dbd5c9;
     padding-top: 3em;
     position: relative;
     bottom: 0;
@@ -20,7 +20,7 @@
     display: flex;
   }
 
- /* Navbar */
+
 .bg{
     background-color: black;
 }
@@ -37,6 +37,7 @@
 
 .div-width{
     width: 100%;
+  
 }
 .fluid-padding{
     padding-right: 0%;
@@ -66,22 +67,25 @@
       width: 1170px;
     }
   } 
-/* .div-padding{
-    padding-left: 5em;
-    padding-right: 5px;
-} */
 
-/* Admin navbar */
+  
 .logoIMG{
     
-    /* padding-right: 50px; */
+  
     padding-left: 100px;
     
 }
 
+.home-h{
+    text-align: center;
+}
 .borderStyle {
-    border: 8px solid rgb(135, 206, 114) !important;
-    width: 170.5em;
+    border: 3px solid rgb(1, 2, 15) !important;
+    width: 164em;
+    margin-right: 50px;
+    margin-left: 50px;
+   margin-top: 20px;
+   margin-bottom:28px ;
       } 
 
 .move-text{
@@ -89,21 +93,26 @@
 }
 
 
-/* login */
+
 
 .login{
-    background-color: rgb(137, 225, 225);
+    background-color: rgb(236, 231, 224);
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
     height: 600px;
-    width: 400px;
+    width: 500px;
     border-radius: 20px;
     margin-left: 30em;
+    border: 5px solid rgb(55, 50, 37);
   
 }
+.log-padding{
+    padding-top: 50px;
+}
 .register-header{
-    font-size: 20px;
+    
+    padding-top: 20px;
 }
 
 .forgotPassword{
@@ -122,32 +131,41 @@
     height: 850px;
   }
 .loginDiv{
-    background-color: antiquewhite;
-    height: 800px;
+    background-color: rgb(205, 234, 245);
+    padding-top: 40px;
+    height: 725px;
+   
 }
 .required-field::after {
     content: "*";
     color: red;
 }
-/* Register Component */
+
 
 .register{
-   background-color: aqua;
+    background-color: rgb(236, 231, 224);
    text-align: center;
    font-size: 20px;
    font-weight: bolder;
-   height: 500px;
-   width: 300px;
+   height: 600px;
+   width: 500px;
    border-radius: 20px;
    margin-left: 30em;
+   border: 5px solid rgb(55, 50, 37);
   
 }
 .registerDiv{
-    background-color: antiquewhite;
-   height: 800px;
+    background-color: rgb(205, 234, 245);
+    height: 725px;
+    padding-top: 40px;
+    
+  
 }
 
-/* compare Component */
+
+.compare-div{
+    height: 725px;
+}
 .compare{
     font-style: normal;
     font-weight: bold;
@@ -158,24 +176,80 @@
 }
 .text{
     float:left;
-    padding-left:20em ;
+    padding-left:3em ;
+    font-weight: bolder;
+    padding-right: 10px;
+   
 }
+
 .dropdown{
     float:left;
    
 }
 .buttonCompare{
-    padding-left:100em ;
+    padding-left:40em ;
+    
 }
 
+#save{
+    margin-left: 7em; 
+    margin-right: 60px;
+    width: 80px;
+    height: 30px;
+    border-radius: 1.5em;
+   background-color: black;
+   color: rgb(255, 166, 0);
+   padding-bottom: 2em;
+   font-size: 16px;
+    font-weight: bolder;
+}
+#load{
+    margin-right: 30em;
+    padding-bottom: 2em;
+    width: 80px;
+    height: 30px;
+    background-color:black;
+    color: rgb(255, 166, 0);
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+}
+#Compare{
+    width: 100px;
+    padding-bottom: 2em;
+    height: 30px;
+    margin-bottom: 2px;
+    background-color:black;
+    color: rgb(255, 166, 0);
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+}
+.cat-Design{
+    font-size: 18px;
+}
 .compareHeading{
     text-align: center;
     font-size: 20px;
     font-weight: bolder;
 }
 
+.categories{
+    font-size: 18px;
+    width: 20%;
+    color: rgb(255, 166, 0);
+ 
+}
+.table{
+    width: 80%;
+    text-align: center;
+    margin-left: 20px;
+}
+.cat-color{
+background-color:black;
+}
 
-/* User Dashboard */
+
 .DasbordUser{
     font-size: 18px;
     text-align: center;
@@ -218,17 +292,19 @@ background-color: rgb(21, 7, 23);
     background-color: rgb(205, 234, 245);
     padding-top: 20px;
     padding-bottom:20px ;
+    height: 725px;
 }
 
-/* User page */
+
 .user-div{
     border: 20px;
 }
 
-/* Mainpage */
+
 .Mainpage-input{
 font-size: medium;
 font-size: 18px;
+padding-left: 20px;
 }
 
 .mainpage{
@@ -270,9 +346,30 @@ font-size: 18px;
     float: right;
     margin-right: 50px;
     margin-top: 50px;
-background-color: #d5d811;
-width: 600px;
+    width: 600px;
+}
 
+
+.cat{
+    background-color: rgb(85, 145, 213);
+    font-size: 18px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.Item{
+    color: rgb(230, 16, 16);
+    font-size: 18px;
+}
+.item-name{
+    color: rgb(32, 32, 32);
+    font-size: 16px;
+}
+.Item-color{
+    font-size: 16px;
+}
+.cat-div{
+    background-color: aqua;
 }
 .non-category{
     background-color:white;
@@ -285,16 +382,18 @@ width: 600px;
     background-color: rgb(15, 73, 219);
 }
 .main{
-    height: 800px;
+    height: 725px;
+}
+.MainPage-H{
+    padding-left: 20px;
+    padding-top: 20px;
 }
 
-span {font-size: 18px;
-  
-font-weight: bolder;}
-span p {font-size: 16px; font-weight: normal;} 
 
 
-/* Contact  */
+
+
+
 .contact-div{
     height: 800px;
     text-align: center;
@@ -302,9 +401,30 @@ span p {font-size: 16px; font-weight: normal;}
     font-weight: bolder;
     }
 
-    /* About */
+ 
     .About{
         font-size: 18px;
         height: 800px;
     }
    
+    .conatct-h{
+        text-align: center;
+    }
+
+    .user-contact{
+        font-size: 18px;
+        width: 20%;
+        color: rgb(255, 166, 0);
+       
+    }
+
+    .contact-user{
+font-size: 18px;
+    }
+
+    .user-h{
+        text-align: center;
+    }
+    .user-color{
+        background-color: black;
+    }
