--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,3 +39,519 @@ background-color: rgb(160, 168, 193);
   }
 
 
+
+  .footer{
+    background-color: rgb(213, 213, 24);
+    
+}
+.admin-footer{
+    background-color: #f5efc9;
+    font-size: 18px;
+    text-align: center;
+}
+
+
+.main-footer {
+    color: rgb(45, 42, 42);
+    background-color: #dbd5c9;
+    padding: 2em;
+    position: relative;
+    bottom: 0;
+    /* width: 100%; */
+    /* display: flex; */
+  }
+
+
+.bg{
+    background-color: black;
+}
+.item-font{
+ 
+  font-style:italic;
+    font-size: 20px;
+    
+}
+.shawdow{
+    box-shadow:  0 5px;
+    }
+
+
+.div-width{
+    width: 100%;
+  
+}
+.fluid-padding{
+    padding-right: 0%;
+    padding-left: 0%;
+}
+
+.center{
+    padding-left: 750px;
+}
+.height{
+   height: 100px; 
+}
+
+.dasboard-padding{
+    margin-left: 50em;
+}
+/* @media (min-width: 768px) {
+  
+  }
+  @media (min-width: 992px) {
+    .container {
+      width: 970px;
+    }
+  }
+  @media (min-width: 1200px) {
+    .container {
+      width: 1170px;
+    }
+  }  */
+
+  
+.logoIMG{
+    padding-left: 100px;
+    
+}
+
+.home-h{
+    text-align: center;
+}
+.borderStyle {
+    border: 3px solid rgb(1, 2, 15) !important;
+    width: 1105px; 
+    margin-right: 50px;
+    margin-left: 50px;
+    margin-top: 20px;
+    margin-bottom:28px ;
+  } 
+
+.move-text{
+    margin-left: 200px;
+}
+
+.login{
+    background-color: rgb(236, 231, 224);
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    height: 600px;
+    width: 500px;
+    border-radius: 20px;
+    margin-left: 30em;
+    border: 5px solid rgb(55, 50, 37);
+  
+}
+.log-padding{
+    padding-top: 50px;
+}
+.register-header{
+    
+    padding-top: 20px;
+}
+
+.forgotPassword{
+    background-color: rgb(137, 225, 225);
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+    height: 600px;
+    width: 400px;
+    border-radius: 20px;
+    margin-left: 30em;
+   }
+
+  .forgotDiv{
+    background-color: antiquewhite;
+    height: 850px;
+  }
+.loginDiv{
+    background-color: rgb(205, 234, 245);
+    padding-top: 5px;
+    padding-bottom: 10px;   
+}
+.required-field::after {
+    content: "*";
+    color: red;
+}
+
+
+.register{
+    background-color: rgb(236, 231, 224);
+   text-align: center;
+   font-size: 20px;
+   font-weight: bolder;
+   height: 600px;
+   width: 500px;
+   border-radius: 20px;
+   margin-left: 30em;
+   border: 5px solid rgb(55, 50, 37);
+  
+}
+.registerDiv{
+    background-color: rgb(205, 234, 245);
+    padding-top: 5px;
+    padding-bottom: 10px; 
+}
+
+
+/* .compare-div{
+    height: 725px;
+} */
+.compare{
+    font-style: normal;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    text-align: center;
+    font-size: 20px;
+    padding-bottom: 40px;
+}
+.text{
+    float:left;
+    padding-left:3em ;
+    font-weight: bolder;
+    padding-right: 10px;
+   
+}
+
+.dropdown{
+    float:left;
+   
+}
+.buttonCompare{
+    padding-left:40em;
+    
+}
+
+#save{
+    /* margin-left: 7em;  */
+    /* margin-right: 60px; */
+    width: 100px;
+    height: 40px;
+    border-radius: 1.5em;
+   background-color: black;
+   color: rgb(255, 166, 0);
+   /* padding-bottom: 2em; */
+   font-size: 16px;
+    font-weight: bolder;
+}
+#load{
+    /* margin-right: 30em; */
+    /* padding-bottom: 2em; */
+    width: 100px;
+    height: 40px;
+    background-color:black;
+    color: rgb(255, 166, 0);
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+}
+#Compare{
+    width: 100px;
+    /* padding-bottom: 2em; */
+    height: 40px;
+    /* margin-bottom: 2px; */
+    background-color:black;
+    color: rgb(255, 166, 0);
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+}
+.cat-Design{
+    font-size: 18px;
+}
+.compareHeading{
+    text-align: center;
+    font-size: 20px;
+    font-weight: bolder;
+}
+
+.categories{
+    font-size: 18px;
+    width: 20%;
+    color: rgb(255, 166, 0);
+ 
+}
+.table{
+    width: 80%;
+    text-align: center;
+    margin-left: 20px;
+}
+.cat-color{
+background-color:black;
+}
+
+
+.DasbordUser{
+    font-size: 18px;
+    text-align: center;
+   
+}
+.Profile{
+    border: 5px solid rgb(55, 50, 37);
+    width: 50%;
+    text-align: left;
+   margin-left: 50em;
+   background-color: rgb(236, 231, 224);
+    padding-bottom: 30px;
+}
+
+.profile-logo{
+    text-align: center;
+}
+.profile-button{
+
+background-color: rgb(21, 7, 23);
+ border: none;
+  color: white;
+  padding: 15px 32px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin-left: 2em;
+  border-radius: 20em;
+  
+}
+.user-profile{
+    text-align: center;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: bolder;
+}
+
+.ProfileDiv{
+    background-color: rgb(205, 234, 245);
+    padding-top: 20px;
+    padding-bottom:20px ;
+    height: 725px;
+}
+
+
+.user-div{
+    border: 20px;
+}
+
+
+.Mainpage-input{
+font-size: medium;
+font-size: 18px;
+padding-left: 20px;
+}
+
+.mainpage{
+   
+    text-align: center;
+     float:right;
+     height: 500px;
+     width: 100em;
+    position: absolute;
+     top: 20em;
+}
+.Image-opacity{
+    opacity: 0.4;
+    margin: 3%;
+    position: relative;
+    width: 20px;
+    }
+.image-main{
+ 
+ float: left;
+ margin-left: 30em;
+ position: absolute;
+     top: 20em;
+    left: 3px;
+   
+}
+.move-text{
+    position: absolute;
+     top: 10em;
+    left: 30px;
+
+}
+.Mainpage-input-red{
+    color:rgb(15, 15, 14);
+    font-size: 16px;
+   }
+
+.category{
+    float: right;
+    margin-right: 50px;
+    width: 600px;
+}
+
+
+.cat{
+    background-color: rgb(85, 145, 213);
+    font-size: 18px;
+    text-align: center;
+    font-weight: bolder;
+}
+
+.Item{
+    color: rgb(230, 16, 16);
+    font-size: 18px;
+}
+.item-name{
+    color: rgb(32, 32, 32);
+    font-size: 16px;
+}
+.Item-color{
+    font-size: 16px;
+}
+.cat-div{
+    background-color: aqua;
+}
+.non-category{
+    background-color:white;
+}
+.mainpage-input-button{
+    margin-bottom: 20px;
+    font-size: 18px;
+    border-radius: 20px;
+    color:rgb(231, 231, 239);
+    background-color: rgb(15, 73, 219);
+}
+.main{
+    height: 615px;
+}
+.MainPage-H{
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+
+
+
+
+
+.contact-div{
+    height: 800px;
+    text-align: center;
+    font-size: 18px;
+    font-weight: bolder;
+    }
+
+ 
+    .About{
+        font-size: 18px;
+        height: 800px;
+    }
+   
+    .conatct-h{
+        text-align: center;
+    }
+
+    .user-contact{
+        font-size: 18px;
+        width: 20%;
+        color: rgb(255, 166, 0);
+       
+    }
+
+    .contact-user{
+font-size: 18px;
+    }
+
+    .user-h{
+        text-align: center;
+    }
+    .user-color{
+        background-color: black;
+    }
+    #page{
+        margin-left:20px ;
+        
+    }
+
+    .note{
+        margin: 3em;
+        }
+
+        .item-n{
+            font-size: 24px;
+        }
+        
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+ 
+
+
+html,
+body {
+  margin: 0;
+}
+
+#App {
+  font-family: sans-serif;
+  height: 745px;
+}
+
+#page-wrap {
+  text-align: center;
+  overflow: auto;
+ 
+}
+
+.bm-item {
+  display: inline-block;
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: #f3f3f3;
+  transition: color 0.2s;
+}
+
+.bm-item:hover {
+  color: rgb(32, 6, 6);
+}
+
+.bm-burger-button {
+  position: fixed;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+.bm-burger-bars {
+  background: #f5f7f8;
+}
+
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+.bm-cross {
+  background: #e9f0f4;
+}
+
+.bm-menu {
+  background: #47484e;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+.bm-morph-shape {
+  fill: #c3cae0;
+}
+
+.bm-item-list {
+  color: #e6e4de;
+}
+
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.no-paddning{
+  padding: 0px !important;
+}
