--- a/src/css/style.css
+++ b/src/css/style.css
@@ -122,7 +122,7 @@ background-color: rgb(160, 168, 193);
     border: 3px solid rgb(1, 2, 15) !important;
     width: 1105px; 
     margin-right: 50px;
-    margin-left: 50px;
+    margin-left: 200px;
     margin-top: 20px;
     margin-bottom:28px ;
   } 
@@ -151,7 +151,7 @@ background-color: rgb(160, 168, 193);
     padding-top: 20px;
 }
 
-.forgotPassword{
+/* .forgotPassword{
     background-color: rgb(137, 225, 225);
     text-align: center;
     font-size: 20px;
@@ -160,12 +160,13 @@ background-color: rgb(160, 168, 193);
     width: 400px;
     border-radius: 20px;
     margin-left: 30em;
-   }
+   } */
 
-  .forgotDiv{
+  /* .forgotDiv{
     background-color: antiquewhite;
     height: 850px;
-  }
+  } */
+
 .loginDiv{
     background-color: rgb(205, 234, 245);
     padding-top: 5px;
@@ -196,9 +197,11 @@ background-color: rgb(160, 168, 193);
 }
 
 
-/* .compare-div{
-    height: 725px;
-} */
+.compare-div{
+    height: 615px;
+    padding-right: 20px;
+    
+}
 .compare{
     font-style: normal;
     font-weight: bold;
@@ -206,19 +209,51 @@ background-color: rgb(160, 168, 193);
     text-align: center;
     font-size: 20px;
     padding-bottom: 40px;
+    
 }
 .text{
+    float:left;
+    padding-left:9em ;
+    font-weight: bolder;
+    }
+    .text-left{
+        float:left;
+        padding-left: 40px;
+    }
+.text-1{
     float:left;
     padding-left:3em ;
     font-weight: bolder;
     padding-right: 10px;
-   
+}
+.text-2{
+    float:left;
+    font-weight: bolder;
+    padding-right: 10px;
 }
 
+#pagination-botton{
+margin-bottom: 200px;
+}
+#search-1{
+    width: 100px;
+    /* padding-bottom: 2em; */
+    height: 40px;
+    /* margin-bottom: 2px; */
+    background-color:black;
+    color: rgb(255, 166, 0);
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+    
+}
 .dropdown{
     float:left;
-   
-}
+   }
+   .div-button{
+    padding-left:50em;
+    
+   }
 .buttonCompare{
     padding-left:40em;
     
@@ -235,6 +270,7 @@ background-color: rgb(160, 168, 193);
    /* padding-bottom: 2em; */
    font-size: 16px;
     font-weight: bolder;
+  margin-left: 20px;
 }
 #load{
     /* margin-right: 30em; */
@@ -246,6 +282,7 @@ background-color: rgb(160, 168, 193);
     font-size: 16px;
     font-weight: bolder;
     border-radius: 1.5em;
+    margin-left: 20px;
 }
 #Compare{
     width: 100px;
@@ -271,12 +308,13 @@ background-color: rgb(160, 168, 193);
     font-size: 18px;
     width: 20%;
     color: rgb(255, 166, 0);
- 
-}
+ }
 .table{
     width: 80%;
     text-align: center;
-    margin-left: 20px;
+    margin-top: 12px;
+    
+    
 }
 .cat-color{
 background-color:black;
@@ -332,33 +370,56 @@ background-color: rgb(21, 7, 23);
 .user-div{
     border: 20px;
 }
-
-
 .Mainpage-input{
+font-style: italic;
+font-weight: bolder;
+font-size: 18px;
+}
+.div-label{
+    
+    float: left;
+}
+
+.Mainpage-input-1{
+    padding-top: 20px;
 font-size: medium;
 font-size: 18px;
 padding-left: 20px;
+font-style: italic;
+font-weight: bolder;
+padding-left: 15em;
 }
-
+.Mainpage-input-2{
+    font-size: medium;
+font-size: 18px;
+padding-left: 20px;
+font-style: italic;
+font-weight: bolder;
+padding-left: 15em;
+}
 .mainpage{
    
     text-align: center;
-     float:right;
+     /* float:right; */
      height: 500px;
      width: 100em;
     position: absolute;
+    margin-left: 29em;
      top: 20em;
 }
 .Image-opacity{
     opacity: 0.4;
-    margin: 3%;
+    margin: 7%;
     position: relative;
-    width: 20px;
+  
+    }
+    .image-map{
+        padding-left: 20em;
     }
 .image-main{
  
- float: left;
- margin-left: 30em;
+ float: center;
+ margin-left: 50em;
  position: absolute;
      top: 20em;
     left: 3px;
@@ -367,28 +428,74 @@ padding-left: 20px;
 .move-text{
     position: absolute;
      top: 10em;
-    left: 30px;
+    left: 300px;
 
 }
+.move-text-error{
+    position: absolute;
+    top: 20em;
+   margin-top: 10em;
+   left: 56em;
+   font-weight: bold;
+}
+
 .Mainpage-input-red{
     color:rgb(15, 15, 14);
-    font-size: 16px;
+    font-size: 18px;
    }
 
 .category{
-    float: right;
-    margin-right: 50px;
+    
+  margin-left: 35em;
     width: 600px;
+    
+    }
+    .category-1{
+        margin-left: 18em;
+       
+    }
+.cat-div-1{
+    font-style: normal;
+    font-weight: bold;
+    font-family: 'Times New Roman', Times, serif;
+    /* text-align: center; */
+    font-size: 18px;
+    padding-bottom: 40px;
+
+}
+.div-1{
+    float:left;
+    padding-left:12em ;
+    font-weight: bolder;
+ 
+
+}
+.div-2{
+    float:left;
+    padding-left:2em ;
+    font-weight: bolder;
+    padding-right: 10px;
+}
+.div-3{
+    float:left;
+    padding-left:1em ;
+    font-weight: bolder;
+    padding-right: 10px;
+    padding-top: 35px;
 }
 
-
 .cat{
-    background-color: rgb(85, 145, 213);
+    color: rgb(255, 166, 0);
     font-size: 18px;
     text-align: center;
     font-weight: bolder;
 }
-
+/* .cat-background{
+    background-color: black;
+} */
+.cat-color{
+    background-color: black;
+}
 .Item{
     color: rgb(230, 16, 16);
     font-size: 18px;
@@ -401,34 +508,40 @@ padding-left: 20px;
     font-size: 16px;
 }
 .cat-div{
-    background-color: aqua;
+    color: rgb(255, 166, 0);
 }
 .non-category{
     background-color:white;
 }
 .mainpage-input-button{
-    margin-bottom: 20px;
+    margin-bottom: 18px;
     font-size: 18px;
     border-radius: 20px;
     color:rgb(231, 231, 239);
     background-color: rgb(15, 73, 219);
+    width: 80px;
 }
 .main{
     height: 615px;
+  margin-bottom: 20px;
+  
 }
 .MainPage-H{
     padding-left: 20px;
     padding-top: 20px;
 }
 
-
-
-
+.font-padding{
+ font-size:18px;
+font-style: italic;
+ margin-top: 6em;
+ 
+}
 
 
 .contact-div{
     height: 800px;
-    text-align: center;
+    text-align: left;
     font-size: 18px;
     font-weight: bolder;
     }
@@ -436,7 +549,33 @@ padding-left: 20px;
  
     .About{
         font-size: 18px;
-        height: 800px;
+       
+        padding-left:6em;
+        padding-right:6em;
+        padding-bottom: 20px;
+   
+       
+    }
+  
+    .div-paragragp{
+        padding-top: 10px;
+        position: absolute;
+        top: 8px;
+        left: 9em;
+        right: 25em;
+        text-align: left;
+    }
+    .div-li{
+        padding-top: 40px;
+        text-align: left;
+    }
+    .con-div{
+        position: relative;
+        text-align: center;
+        color: white;
+    }
+    .website{
+        color: #76df26;
     }
    
     .conatct-h{
@@ -460,13 +599,17 @@ font-size: 18px;
     .user-color{
         background-color: black;
     }
-    #page{
+    /* #page{
         margin-left:20px ;
         
+    } */
+    .pagination-side{
+       padding-left: 3em;
     }
 
     .note{
-        margin: 3em;
+        margin-left: 18em;
+        margin-bottom: 30px;
         }
 
         .item-n{
