--- a/src/css/style.css
+++ b/src/css/style.css
@@ -18,7 +18,6 @@ background-color: royalblue;
 #sidebar{
 
 grid-area:sidebar;
-
 height: 70px;
 background-color: rgb(160, 168, 193);
 }
@@ -199,7 +198,8 @@ background-color: rgb(160, 168, 193);
 
 .compare-div{
     height: 615px;
-    padding-right: 20px;
+    padding-right: 10px;
+    padding-left: 20em;
     
 }
 .compare{
@@ -213,7 +213,7 @@ background-color: rgb(160, 168, 193);
 }
 .text{
     float:left;
-    padding-left:9em ;
+    padding-left:1em ;
     font-weight: bolder;
     }
     .text-left{
@@ -237,9 +237,9 @@ margin-bottom: 200px;
 }
 #search-1{
     width: 100px;
-    /* padding-bottom: 2em; */
+  
     height: 40px;
-    /* margin-bottom: 2px; */
+ 
     background-color:black;
     color: rgb(255, 166, 0);
     font-size: 16px;
@@ -255,7 +255,7 @@ margin-bottom: 200px;
     
    }
 .buttonCompare{
-    padding-left:40em;
+    margin-left:30em;
     
 }
 
@@ -310,11 +310,16 @@ margin-bottom: 200px;
     color: rgb(255, 166, 0);
  }
 .table{
+    margin-left: 15em;
     width: 80%;
     text-align: center;
-    margin-top: 12px;
-    
-    
+    margin-top: 12px;   
+}
+.table-compare{
+    margin-left: 0em;
+    width: 80%;
+    text-align: center;
+    margin-top: 12px;   
 }
 .cat-color{
 background-color:black;
@@ -330,7 +335,7 @@ background-color:black;
     border: 5px solid rgb(55, 50, 37);
     width: 50%;
     text-align: left;
-   margin-left: 50em;
+   margin-left: 40em;
    background-color: rgb(236, 231, 224);
     padding-bottom: 30px;
 }
@@ -363,7 +368,7 @@ background-color: rgb(21, 7, 23);
     background-color: rgb(205, 234, 245);
     padding-top: 20px;
     padding-bottom:20px ;
-    height: 725px;
+    height: 615px;
 }
 
 
@@ -383,7 +388,7 @@ font-size: 18px;
 .Mainpage-input-1{
     padding-top: 20px;
 font-size: medium;
-font-size: 18px;
+font-size: 16px;
 padding-left: 20px;
 font-style: italic;
 font-weight: bolder;
@@ -391,7 +396,7 @@ padding-left: 15em;
 }
 .Mainpage-input-2{
     font-size: medium;
-font-size: 18px;
+font-size: 16px;
 padding-left: 20px;
 font-style: italic;
 font-weight: bolder;
@@ -445,22 +450,21 @@ padding-left: 15em;
    }
 
 .category{
-    
-  margin-left: 35em;
-    width: 600px;
-    
+  margin-left: 25em;
+    width: 1000px;
+  
     }
-    .category-1{
-        margin-left: 18em;
-       
-    }
+.category-1{
+    margin-left: 3em;
+    
+}
 .cat-div-1{
     font-style: normal;
     font-weight: bold;
     font-family: 'Times New Roman', Times, serif;
     /* text-align: center; */
     font-size: 18px;
-    padding-bottom: 40px;
+    padding-bottom: 20px;
 
 }
 .div-1{
@@ -540,12 +544,23 @@ font-style: italic;
 
 
 .contact-div{
-    height: 800px;
-    text-align: left;
+    
+    text-align: center;
     font-size: 18px;
     font-weight: bolder;
-    }
+    margin-left: 8em;
+    border: 5px solid rgb(55, 50, 37);
+    background-color: white;
+    height: 500px;
+    width: 700px;
 
+    }
+.conatct-main-div{
+    background-color: rgb(205, 234, 245);
+    padding-top: 45px;
+    padding-bottom: 70px; 
+    padding-left: 30em;
+}
  
     .About{
         font-size: 18px;
@@ -590,7 +605,7 @@ font-style: italic;
     }
 
     .contact-user{
-font-size: 18px;
+        font-size: 18px;
     }
 
     .user-h{
@@ -608,7 +623,7 @@ font-size: 18px;
     }
 
     .note{
-        margin-left: 18em;
+        margin-left: 2em;
         margin-bottom: 30px;
         }
 
@@ -697,4 +712,18 @@ body {
 
 .no-paddning{
   padding: 0px !important;
+}
+
+.adminDiv{
+    padding: 2em 2em 2em 10em;
+}
+
+.menu-item-font{
+    text-align: center;
+    font-size: medium;
+    background-color: rgb(255, 166, 0);
+}
+
+.menu-item-font a:link{
+    color: yellow;
 }
