--- a/src/css/style.css
+++ b/src/css/style.css
@@ -67,7 +67,7 @@ background-color: rgb(160, 168, 193);
 .item-font{
  
   font-style:italic;
-    font-size: 20px;
+    font-size: 18px;
     
 }
 .shawdow{
@@ -92,7 +92,7 @@ background-color: rgb(160, 168, 193);
 }
 
 .dasboard-padding{
-    margin-left: 50em;
+    margin-left: 47em;
 }
 /* @media (min-width: 768px) {
   
@@ -171,6 +171,30 @@ background-color: rgb(160, 168, 193);
     padding-top: 5px;
     padding-bottom: 10px;   
 }
+#login-button{
+    width: 100px;
+    
+    height: 40px;
+ 
+    background-color: rgb(205, 234, 245);
+    color: black;
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+}
+
+#reg-button{
+    width: 100px;
+    
+    height: 40px;
+ 
+    background-color: rgb(205, 234, 245);
+    color: black;
+    font-size: 16px;
+    font-weight: bolder;
+    border-radius: 1.5em;
+}
+
 .required-field::after {
     content: "*";
     color: red;
@@ -433,7 +457,7 @@ padding-left: 15em;
 .move-text{
     position: absolute;
      top: 10em;
-    left: 300px;
+    left: 150px;
 
 }
 .move-text-error{
@@ -527,8 +551,6 @@ padding-left: 15em;
 }
 .main{
     height: 615px;
-  margin-bottom: 20px;
-  
 }
 .MainPage-H{
     padding-left: 20px;
@@ -536,10 +558,9 @@ padding-left: 15em;
 }
 
 .font-padding{
- font-size:18px;
+ font-size:20px;
 font-style: italic;
- margin-top: 6em;
- 
+ margin-top: 8em;
 }
 
 
@@ -726,4 +747,70 @@ body {
 
 .menu-item-font a:link{
     color: yellow;
+}
+
+.left-padding{
+    padding-right: 3em;
+}
+
+
+/* Currency */
+.App-converter{
+   
+    width: 100%;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding-top: 50px;
+   
+    background-color: rgb(205, 234, 245);
+    height: 615px;
+  }
+  .heading{
+   
+    font-size: 35px;
+  }
+  .container-convert{
+    height: 300px;
+    width: 800px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+  }
+  input{
+    padding-left: 5px;
+    font-size: 20px;
+    height: 36px;
+  }
+  .middle,.right{
+    width: 120px;
+  }
+  .switch{
+    padding: 5px;
+    margin-top: 25px;
+    background-color: #0a92e0;
+
+    border-radius: 50%;
+    cursor: pointer;
+  }
+  .result{
+    box-sizing: border-box;
+    width: 800px;
+    padding-left: 30px;
+  }
+ 
+   .switch{
+    color: rgb(41, 34, 139);
+  }
+
+  .currency-p{
+    color: rgb(233, 12, 12);
+    
+}
+
+.button-color-convert{
+background-color: #0a92e0;
+color:#0c0105;
+width: 100px;
+font-size: 22px;
 }
